# 50_shades_of_grey

./: CImg.h  CMakeLists.txt  README.md  autotest.hpp  data_processing.hpp  fun.hpp  geometry.hpp  main.cpp  my_structs.hpp
data and results/: screen_data.txt  screen_data2.txt  spheres_data.txt  spheres_data2.txt  spheres_data3.txt
